# gamestart-legacy-cooker

./: .gitignore  CMakeLists.txt  README.md  gamestart-cooker.cmd  pyproject.toml
c/: gamestart_cooker.c
docs/: c-tool.md  context.md  format.md  testing.md
src/: gamestart_cooker.c
src/gamestart_legacy_cooker/: __init__.py  archive.py  cli.py
tests/: download_demo_archive.py  test_archive.py
